footer section completed

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
     <link rel="stylesheet" href="Styles/styles.css">
+    <script src="https://kit.fontawesome.com/c326d783d8.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="inter-font">
     <header class="header background display-flex">
         <h3 class="brand">Fitness</h3>
+        <div class="menu-bar"><i class="fa-solid fa-bars"></i></div>
         <nav class="nav-bar">
             <ul class="nav-items display-flex">
                 <li class="nav-item"><a href="" id="link-bg-color" class="nav-link">Home</a></li>
@@ -30,14 +32,16 @@
                     A huge selection of health and fitness content, healthy recipes and transformation stories to help
                     you get fit and stay fit!
                 </p>
-                <button class="btn-primary">Join Club Now!</button>
-                <button class="btn-secondary">Download App</button>
+                <div class="btn">
+                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="btn-secondary">Download App</button>
+                </div>
             </div>
             <div class="banner-image">
                 <img src="images/Images 2.png" alt="">
                 <div class="top-right">
                     <h4 class="overlay-text">500+</h4>
-                    <p class="section-description">Free Workout Videos</p>
+                    <p class="section-description overlay-description">Free Workout Videos</p>
                 </div>
                 <div class="bottom-left">
                     <h4 class="overlay-text">
@@ -98,6 +102,7 @@
                 </div>
             </div>
         </section>
+
         <section class="section-background">
             <div>
                 <h3 class="text-primary text-center">BMI Calculator</h3>
@@ -160,7 +165,8 @@
         <section class="our-team section-background">
             <h3 class="text-primary text-center">Meet Our Team</h3>
             <p class="section-description text-center">
-                We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+                We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                gym.
             </p>
             <div class="trainers background-color">
                 <div class="trainer">
@@ -208,18 +214,39 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="fitness-description">
-            <h2>Fitness</h2>
-            <p>
-                We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
-            </p>
+    <footer class="section-background">
+        <div class="footer">
+            <div class="fitness-description">
+                <h2>Fitness</h2>
+                <p>
+                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. With hundreds of professional workouts.
+                </p>
+            </div>
+            <div class="get-started">
+                <div>
+                    <h4>Get Started</h4>
+                    <ul>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="">Affiliate Program</a></li>
+                        <li><a href="">About Us</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>Get Started</h4>
+                    <ul>
+                        <li><a href="">Fitness</a></li>
+                        <li><a href="">Platform</a></li>
+                        <li><a href="">Workout Library</a></li>
+                        <li><a href="">App Design</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="get-started">
-
-        </div>
-        <div class="get-started">
-
+        <div class="rights">
+            <hr>
+            <p>All right reserved @Fitness 2024</p>
         </div>
     </footer>
 </body>
