gallery images added

--- a/index.html
+++ b/index.html
@@ -213,6 +213,17 @@
                 </div>
             </div>
         </section>
+        <section class="gallery-container">
+            <h1>///Gallery</h1>
+            <div class="grid-gallery">
+                <img src="image1.jpg" alt="Workout 1">
+                <img src="image2.jpg" alt="Workout 2">
+                <img src="image3.jpg" alt="Workout 3">
+                <img src="image4.jpg" alt="Workout 4">
+                <img src="image5.jpg" alt="Workout 5">
+                <img src="image6.jpg" alt="Workout 6">
+            </div>
+        </section>
     </main>
     <footer class="section-background">
         <div class="footer">
