recipe section added

--- a/index.html
+++ b/index.html
@@ -213,15 +213,42 @@
                 </div>
             </div>
         </section>
-        <section class="gallery-container">
-            <h1>///Gallery</h1>
-            <div class="grid-gallery">
-                <img src="image1.jpg" alt="Workout 1">
-                <img src="image2.jpg" alt="Workout 2">
-                <img src="image3.jpg" alt="Workout 3">
-                <img src="image4.jpg" alt="Workout 4">
-                <img src="image5.jpg" alt="Workout 5">
-                <img src="image6.jpg" alt="Workout 6">
+        <section class="recipe-container section-background">
+            <div class="contents">
+                <h1>Featured Recipes</h1>
+                <div class="content">
+                  <img src="images/image 1.png" alt="">
+                  <div class="recipe-name">
+                    <h2>Protein-packed power bowl</h2>
+                    <p>
+                      A colorful protein-packed power bowl filled with flavorful, meaty grilled satay tofu and an 
+                      array of vibrant veggies on a bed of fluffy quinoa. Completed with a healthy and delicious 
+                      satay dipping sauce and crushed roasted peanuts. Delicious!
+                    </p>
+                    <button class="view-recipe-btn">
+                      View Full Recipe <span>&rarr;</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+          
+            <div class="recipe-items">
+                <div class="recipe-item">
+                  <img src="images/image 22.png" alt="">
+                  <p>High Protein Recipes</p>
+                </div>
+                <div class="recipe-item">
+                  <img src="images/Rectangle 27.png" alt="">
+                  <p>Low Carb Recipes</p>
+                </div>
+                <div class="recipe-item">
+                  <img src="images/image 33.png" alt="">
+                  <p>Dairy Free Recipes</p>
+                </div>
+                <div class="recipe-item">
+                  <img src="images/Rectangle 26.png" alt="Vegetarian">
+                  <p>Vegetarian Recipes</p>
+            </div>
             </div>
         </section>
     </main>
