mobile responsive recipe section completed

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                       satay dipping sauce and crushed roasted peanuts. Delicious!
                     </p>
                     <button class="view-recipe-btn">
-                      View Full Recipe <span>&rarr;</span>
+                      View Full Recipe
                     </button>
                   </div>
                 </div>
